combined boards into one demo

--- a/extra-board-index.html
+++ b/extra-board-index.html
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Final Layout</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="css/extra-board.css">
 </head>
 <script src="logic.js"></script>
 <body>
+        <nav>
+            <div class="nav-wrapper">
+                <a href="#" class="brand-logo">Logo</a>
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="index.html">Version 1</a></li>
+                <li><a href="index3.html">Version 2</a></li>
+                <li><a href="extra-board-index.html">Version 3</a></li>
+                </ul>
+            </div>
+        </nav>
+<div class="game-container">
     <div class="menu card-panel white lighten-5">
         <div class="start-menu white lighten-3 white-text"id="start-menu">
                 <button class="btn" onClick="start()">Start</button>
@@ -212,5 +223,6 @@
         <div class="road82 road card-panel lighten-3 hidden" id="road82"></div>
         <div class="road83 road card-panel lighten-3 hidden" id="road83"></div>
     </div>
+</div> 
 </body>
 </html>
