--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <script src="logic.js"></script>
+
 <body>
+        <nav>
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">Logo</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="index.html">Version 1</a></li>
+                    <li><a href="index3.html">Version 2</a></li>
+                    <li><a href="extra-board-index.html">Version 3</a></li>
+                    </ul>
+                </div>
+            </nav>
+    <div class="body-container">
     <div class="menu card-panel white lighten-5">
         <div class="start-menu white lighten-3 white-text"id="start-menu">
                 <button class="btn Green lighten-2 start-button" onClick="start()">Start</button>
@@ -79,5 +91,6 @@
         <div class="card-panel teal lighten-3"></div>
 
     </div>
+</div>
 </body>
 </html>
