--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Grid</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="css/main3.css">
     <script>
         function getRandomInt(min, max) {
@@ -85,7 +87,6 @@
 <body>
 
     <div class="grid">
-            <nav class="navbar">NAVBAR</nav>
         <div class="board">
                     <div class="road road1" onclick="placeRoad(this.id)" id="road1">r1</div>
                     <div class="road road2"onclick="placeRoad(this.id)" id="road2">r2</div>
