updated version2 navbar

--- a/index3.html
+++ b/index3.html
@@ -85,7 +85,16 @@
         </script>
 </head>
 <body>
-
+        <nav>
+                <div class="nav-wrapper">
+                    <a href="#" class="brand-logo">Logo</a>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                    <li><a href="index3.html">Version 1</a></li>
+                    <li><a href="index.html">Version 2</a></li>
+                    <li><a href="extra-board-index.html">Version 3</a></li>
+                    </ul>
+                </div>
+            </nav>
     <div class="grid">
         <div class="board">
                     <div class="road road1" onclick="placeRoad(this.id)" id="road1">r1</div>
